--- a/main.html
+++ b/main.html
@@ -8,6 +8,14 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1 align="center">My Playlist</h1>
+    <ul id="_blank">
+        <li><b>Song 1</b></li><br>
+        <li><b>Song 2</b></li><br>
+        <li><b>Song 3</b></li><br>
+        <li><b>Song 4</b></li><br>
+        <li><b>Song 5</b></li>
+    </ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
