--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-    <h1 align="center">My Playlist</h1>
+    <h1>My Playlist</h1>
     <ul id="_blank">
         <li><b>Song 1</b></li><br>
         <li><b>Song 2</b></li><br>
@@ -16,7 +16,7 @@
         <li><b>Song 4</b></li><br>
         <li><b>Song 5</b></li>
     </ul>
-    <h2 align="center">Now Playing...</h2>
+    <h2>Now Playing...</h2>
     <script type="text/javascript" src="./script.js">
 </script>
 
