--- a/main.html
+++ b/main.html
@@ -9,13 +9,13 @@
 <body>
 	<!-- the entire body must be written by student -->
     <h1>My Playlist</h1>
-    <ul id="_blank">
-        <li><b>Song 1</b></li><br>
-        <li><b>Song 2</b></li><br>
-        <li><b>Song 3</b></li><br>
-        <li><b>Song 4</b></li><br>
-        <li><b>Song 5</b></li>
-    </ul>
+    <ul id="blank">
+        <li><a target="_blank">Song 1</a></li><br>
+        <li><a target="_blank">Song 2</a></li><br>
+        <li><a target="_blank">Song 3</a></li><br>
+        <li><a target="_blank">Song 4</a></li><br>
+        <li><a target="_blank">Song 5</a></li><br>
+	</ul>
     <h2>Now Playing...</h2>
     <script type="text/javascript" src="./script.js">
 </script>
