--- a/main.html
+++ b/main.html
@@ -8,15 +8,17 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-    <h1>My Playlist</h1>
+  <div>
+    <h1 align="center">My Playlist</h1>
     <ul id="blank">
         <li><a target="_blank">Song 1</a></li><br>
         <li><a target="_blank">Song 2</a></li><br>
         <li><a target="_blank">Song 3</a></li><br>
         <li><a target="_blank">Song 4</a></li><br>
         <li><a target="_blank">Song 5</a></li><br>
-	</ul>
-    <h2>Now Playing...</h2>
+    </ul>
+    <h2 align="center">Now Playing...</h2>
+  </div>
     <script type="text/javascript" src="./script.js">
 </script>
 
