--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-  <div>
+    <div>
     <h1 align="center">My Playlist</h1>
     <ul id="blank">
         <li><a target="_blank">Song 1</a></li><br>
@@ -18,7 +18,13 @@
         <li><a target="_blank">Song 5</a></li><br>
     </ul>
     <h2 align="center">Now Playing...</h2>
-  </div>
+    </div>
+	<div id="box">
+        <video class="player_one" controls>
+            <source src="https://www.w3schools.com/tags/movie.mp4">
+        </video>
+        <h2>MP3 songs</h2>
+    </div>
     <script type="text/javascript" src="./script.js">
 </script>
 
