--- a/main.html
+++ b/main.html
@@ -21,9 +21,13 @@
     </div>
 	<div id="box">
         <video class="player_one" controls>
-            <source src="https://www.w3schools.com/tags/movie.mp4">
+            <source src="https://www.w3schools.com/tags/movie.mp4" >
         </video>
         <h2>MP3 songs</h2>
+		<p>Maan Meri Jaan</p>
+        <audio class="player_two" controls>
+            <source src="https://www.pagalworld.com.se/files/download/id/64630">
+        </audio>
     </div>
     <script type="text/javascript" src="./script.js">
 </script>
