--- a/main.html
+++ b/main.html
@@ -20,12 +20,12 @@
     <h2 align="center">Now Playing...</h2>
     </div>
 	<div id="box">
-        <video class="player_one" controls>
+        <video class="player_one" controls  type="source">
             <source src="https://www.w3schools.com/tags/movie.mp4" >
         </video>
         <h2>MP3 songs</h2>
 		<p>Maan Meri Jaan</p>
-        <audio class="player_two" controls>
+        <audio class="player_two" controls  type="source">
             <source src="https://www.pagalworld.com.se/files/download/id/64630">
         </audio>
     </div>
